grub-installer (1.19) UNRELEASED; urgency=low

  * Remove Standards-Version field from control file.
  * Add Lintian override for standards-version.

 -- Otavio Salvador <otavio@debian.org>  Tue,  5 Sep 2006 10:14:07 -0300

grub-installer (1.18) unstable; urgency=low

  [ Joey Hess ]
  * Fix mistake in displaying failure message if grub-install run in rescue
    mode fails.

  [ Simon Huggins ]
  * Allow installation to more than one disk if preseeding.

  [ Otavio Salvador ]
  * Apply patch from Robert Millan <rmh@aybabtu.com> to remove hardcoded
    paths from grub-install and update-grub. Closes: #380351
  * Apply patch from Robert Millan <rmh@aybabtu.com> to allow use of grub2
    instead of grub legacy. Closes: 385180

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Catalan (ca.po) by Jordi Mallach
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul
  * German (de.po) by Jens Seidel
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Greek, Modern (1453-) (el.po) by quad-nrg.net
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Estonian (et.po) by Siim Põder
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Tapio Lehtonen
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Gujarati (gu.po) by Kartik Mistry
  * Hebrew (he.po) by Lior Kaplan
  * Hungarian (hu.po) by SZERVÁC Attila
  * Italian (it.po) by Giuseppe Sacco
  * Japanese (ja.po) by Kenshi Muto
  * Khmer (km.po) by Khoem Sokhem
  * Korean (ko.po) by Sunjae park
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Macedonian (mk.po) by Georgi Stanojevski
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Dutch (nl.po) by Bart Cornelis
  * Panjabi (pa.po) by A S Alam
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrişor
  * Russian (ru.po) by Yuri Kozlov