@@ -1,3 +1,4 @@
 rescue.d lib
 grub-installer usr/bin
 functions.sh usr/share/grub-installer
+otheros.sh usr/share/grub-installer
