@@ -13,6 +13,7 @@ else
 fi
 
 . /usr/share/grub-installer/functions.sh
+. /usr/share/grub-installer/otheros.sh
 
 newline="
 "
@@ -43,14 +44,14 @@ get_serial_console() {
 
 serial="$(get_serial_console)"
 
-# This is copied from update-grub. We've requested that it be moved
-# to a utility or shell library.
+# This is copied from update-grub; we've requested that it be moved
+# to a utility or shell library
 device_map=$ROOT/boot/grub/device.map
 # Usage: convert os_device
-# Convert an OS device to the corresponding GRUB drive.
-# This part is OS-specific.
+# Convert an OS device to the corresponding GRUB drive
+# This part is OS-specific
 convert () {
-#    # First, check if the device file exists.
+## First, check if the device file exists
 #    if test -e "$1"; then
 #		:
 #    else
@@ -58,9 +59,9 @@ convert () {
 #		exit 1
 #    fi
 
-	host_os=`uname -s | tr 'A-Z' 'a-z'`
+    host_os=`uname -s | tr 'A-Z' 'a-z'`
 
-    # Break the device name into the disk part and the partition part.
+    # Break the device name into the disk part and the partition part
     case "$host_os" in
     linux*)
 		tmp_disk=`echo "$1" | sed -e 's%\([sh]d[a-z]\)[0-9]*$%\1%' \
@@ -94,11 +95,11 @@ convert () {
 		exit 1 ;;
     esac
 
-    # Get the drive name.
+    # Get the drive name
     tmp_drive=`grep -v '^#' $device_map | grep "$tmp_disk *$" \
 			| sed 's%.*\(([hf]d[0-9][a-g0-9,]*)\).*%\1%'`
 
-    # If not found, print an error message and exit.
+    # If not found, print an error message and exit
     if test "x$tmp_drive" = x; then
 		echo "$1 does not have any corresponding BIOS drive." 1>&2
 		exit 1
@@ -106,7 +107,7 @@ convert () {
 
     if test "x$tmp_part" != x; then
 		# If a partition is specified, we need to translate it into the
-		# GRUB's syntax.
+		# GRUB's syntax
 		case "$host_os" in
 		linux*)
 	    	echo "$tmp_drive" | sed "s%)$%,`expr $tmp_part - 1`)%" ;;
@@ -148,12 +149,12 @@ convert () {
 	    	echo "$tmp_drive" ;;
 		esac
     else
-		# If no partition is specified, just print the drive name.
+		# If no partition is specified, just print the drive name
 		echo "$tmp_drive"
     fi
 }
 
-# Convert a linux non-devfs disk device name into the hurd's syntax.
+# Convert a linux non-devfs disk device name into the hurd's syntax
 hurd_convert () {
 	dr_type=$(expr "$1" : '.*\([hs]d\)[a-h][0-9]*')
 	dr_letter=$(expr "$1" : '.*d\([a-h]\)[0-9]*')
@@ -171,7 +172,7 @@ hurd_convert () {
 	echo "$dr_type${dr_num}s$dr_part"
 }
 
-# Run update-grub in $ROOT.
+# Run update-grub in $ROOT
 update_grub () {
 	if ! log-output -t grub-installer $chroot $ROOT update-grub -y ; then
 		error "Running 'update-grub -y' failed." 1>&2
@@ -194,19 +195,19 @@ grub_version="grub"
 menu_file="menu.lst"
 
 # reiserfs is the only filesystem that d-i supports and grub2 doesn't yet
-if [ "$bootfstype" != "reiserfs" ]; then
-  db_input low grub-installer/grub2_instead_of_grub_legacy || [ $? -eq 30 ]
-  db_go || true
-  db_get grub-installer/grub2_instead_of_grub_legacy
-  if [ "$RET" = true ]; then
-    grub_version="grub2"
-    menu_file="grub.cfg"
-  fi
-fi
+##if [ "$bootfstype" != "reiserfs" ]; then
+##  db_input low grub-installer/grub2_instead_of_grub_legacy || [ $? -eq 30 ]
+##  db_go || true
+##  db_get grub-installer/grub2_instead_of_grub_legacy
+##  if [ "$RET" = true ]; then
+##    grub_version="grub2"
+##    menu_file="grub.cfg"
+##  fi
+##fi
 
 if [ "$bootfstype" = "xfs" ]; then
-	# warn user that grub on xfs is not safe and let them back out to
-	# main menu.
+	# Warn user that grub on xfs is not safe and let them back out to
+	# main menu
 	db_input critical grub-installer/install_to_xfs || [ $? -eq 30 ]
 	db_go || exit 10
 	db_get grub-installer/install_to_xfs
@@ -221,11 +222,11 @@ db_progress INFO grub-installer/progress/step_install
 
 # apt-install passes --no-remove to apt, but grub{,2} conflict each other, so
 # we need to purge them first to support users who try grub2 and then switch
-# to grub legacy, or vice-versa.
-log-output -t grub-installer $chroot $ROOT dpkg -P grub grub2
+# to grub legacy, or vice-versa
+##log-output -t grub-installer $chroot $ROOT dpkg -P grub grub2
 
-if ! apt-install ${grub_version} ; then
-	info "Calling 'apt-install ${grub_version}' failed"
+if ! apt-install $grub_version ; then
+	info "Calling 'apt-install $grub_version' failed"
 	# Hm, unable to install grub into $ROOT/, what should we do?
 	db_input critical grub-installer/apt-install-failed || [ $? -eq 30 ]
 	if ! db_go; then
@@ -243,7 +244,7 @@ db_progress STEP 1
 db_progress INFO grub-installer/progress/step_os-probe
 os-prober > /tmp/os-probed || true
 
-# Work out what probed OSes can be booted from grub.
+# Work out what probed OSes can be booted from grub
 tmpfile=/tmp/menu.lst.extras
 if [ -s /tmp/os-probed ]; then
 	supported_os_list=""
@@ -261,7 +262,7 @@ if [ -s /tmp/os-probed ]; then
 			;;
 			linux)
 				# Check for linux systems that we don't
-				# know how to boot.
+				# know how to boot
 				partition=$(echo "$os" | cut -d: -f1)
 				if [ -z "$(linux-boot-prober $partition)" ]; then
 					if [ -n "$unsupported_os_list" ]; then
@@ -386,11 +387,11 @@ done
 db_progress STEP 1
 db_progress INFO grub-installer/progress/step_config_loader
 
-# Delete for idempotency.
-rm -f $ROOT/boot/grub/${menu_file}
+# Delete for idempotency
+rm -f $ROOT/boot/grub/$menu_file
 update_grub
 
-# Set up a password if asked.
+# Set up a password if asked
 db_input low grub-installer/password || true
 if ! db_go; then
 	# back up to menu
@@ -410,11 +411,11 @@ if [ "$RET" ]; then
 	# Add a line to menu.lst to use the given password
 	# The line is appended after the commented example
 	sed '/^# password/r /tmp/menu.lst.password' \
-		< $ROOT/boot/grub/${menu_file} > $ROOT/boot/grub/${menu_file}.new
-	mv $ROOT/boot/grub/${menu_file}.new $ROOT/boot/grub/${menu_file}
+		< $ROOT/boot/grub/$menu_file > $ROOT/boot/grub/$menu_file.new
+	mv $ROOT/boot/grub/$menu_file.new $ROOT/boot/grub/$menu_file
 	# By default, menu.lst is world-readable, which is not so good if it
 	# contains a password.
-	chmod o-r $ROOT/boot/grub/${menu_file}
+	chmod o-r $ROOT/boot/grub/$menu_file
 	rm -f /tmp/menu.lst.password
 fi 
 
@@ -422,12 +423,12 @@ user_params=$(echo $(user-params)) || true
 if [ -n "$user_params" ]; then
 	# Modify menu.lst to include user parameters.
 	sed "s!^\(# kopt=.*\)!\1 $user_params!" \
-		< $ROOT/boot/grub/${menu_file} > $ROOT/boot/grub/${menu_file}.new
-	mv $ROOT/boot/grub/${menu_file}.new $ROOT/boot/grub/${menu_file}
+		< $ROOT/boot/grub/$menu_file > $ROOT/boot/grub/$menu_file.new
+	mv $ROOT/boot/grub/$menu_file.new $ROOT/boot/grub/$menu_file
 	update_grub # again, to add new options to all the Debian kernel entries
 fi
 
-# Generation menu.lst addition for other OSes.
+# Generate menu.lst additions for other OSes
 tmpfile=/tmp/menu.lst.extras
 OLDIFS="$IFS"
 IFS="$newline"
@@ -441,52 +442,10 @@ for os in $(cat /tmp/os-probed); do
 			partition=$(mapdevfs $(echo "$os" | cut -d: -f1))
 			grubdrive=$(convert "$partition") || true
 			if [ -n "$grubdrive" ]; then
-				cat >> $tmpfile <<EOF
-
-# This entry automatically added by the Debian installer for a non-linux OS
-# on $partition
-EOF
-				if [ "${grub_version}" = "grub" ] ; then
-					cat >> $tmpfile <<EOF
-title		$title
-root		$grubdrive
-savedefault
-EOF
-					# Only set makeactive if grub is installed
-					# in the mbr.
-					if [ "$bootdev" = "(hd0)" ] ; then
-						cat >> $tmpfile <<EOF
-makeactive
-EOF
-					fi
-					# DOS/Windows can't deal with booting from a
-					# non-first hard drive.
-					case $shortname in
-						MS*|Win*)
-							grubdisk="$(echo "$grubdrive" | sed 's/^(//; s/)$//; s/,.*//')"
-							case $grubdisk in
-								hd0)	;;
-								hd*)
-									cat >> $tmpfile <<EOF
-map		(hd0) ($grubdisk)
-map		($grubdisk) (hd0)
-EOF
-									;;
-							esac
-							;;
-					esac
-					cat >> $tmpfile <<EOF
-chainloader	+1
-
-EOF
-				else # grub2
-					cat >> $tmpfile <<EOF
-menuentry "$title" {
-	set root=$grubdrive
-	chainloader +1
-}
-EOF
-				fi
+				case $grub_version in
+				    grub)	grub_write_chain ;;
+				    grub2)	grub2_write_chain ;;
+				esac
 			fi
 		;;
 		linux)
@@ -516,43 +475,10 @@ EOF
 					grubdrive=$(convert "$mappedpartition") || true
 				fi
 				params="$(echo "$entry" | cut -d : -f6-) $serial"
-				cat >> $tmpfile <<EOF
-
-# This entry automatically added by the Debian installer for an existing
-# linux installation on $mappedpartition.
-EOF
-				if [ "${grub_version}" = "grub" ] ; then
-					cat >> $tmpfile <<EOF
-title		$label (on $mappedpartition)
-root		$grubdrive
-kernel		$kernel $params
-EOF
-					if [ -n "$initrd" ]; then
-						cat >> $tmpfile <<EOF
-initrd		$initrd
-EOF
-					fi
-					cat >> $tmpfile <<EOF
-savedefault
-boot
-
-EOF
-				else # grub2
-					cat >> $tmpfile <<EOF
-menuentry "$label (on $mappedpartition)" {
-	set root=$grubdrive
-	linux $kernel $params
-EOF
-					if [ -n "$initrd" ]; then
-						cat >> $tmpfile <<EOF
-	initrd $initrd
-EOF
-					fi
-					cat >> $tmpfile <<EOF
-}
-
-EOF
-				fi
+				case $grub_version in
+				    grub)	grub_write_linux ;;
+				    grub2)	grub2_write_linux ;;
+				esac
 				IFS="$newline"
 			done
 			IFS="$OLDIFS"
@@ -562,43 +488,10 @@ EOF
 			grubdrive=$(convert "$partition") || true
 			hurddrive=$(hurd_convert "$partition") || true
 			# Use the standard hurd boilerplate to boot it.
-			cat >> $tmpfile <<EOF
-
-# This entry automatically added by the Debian installer for an existing
-# hurd installation on $partition.
-EOF
-			if [ "${grub_version}" = "grub" ] ; then
-				cat >> $tmpfile <<EOF
-title		$title (on $partition)
-root		$grubdrive
-kernel		/boot/gnumach.gz root=device:$hurddrive
-module		/hurd/ext2fs.static --readonly \\
-			--multiboot-command-line=\${kernel-command-line} \\
-			--host-priv-port=\${host-port} \\
-			--device-master-port=\${device-port} \\
-			--exec-server-task=\${exec-task} -T typed \${root} \\
-			\$(task-create) \$(task-resume)
-module		/lib/ld.so.1 /hurd/exec \$(exec-task=task-create)
-savedefault
-boot
-
-EOF
-			else
-				cat >> $tmpfile <<EOF
-menuentry "$title (on $partition)" {
-	set root=$grubdrive
-	multiboot /boot/gnumach.gz root=device:$hurddrive
-	module /hurd/ext2fs.static --readonly \\
-			--multiboot-command-line=\${kernel-command-line} \\
-			--host-priv-port=\${host-port} \\
-			--device-master-port=\${device-port} \\
-			--exec-server-task=\${exec-task} -T typed \${root} \\
-			\$(task-create) \$(task-resume)
-	module /lib/ld.so.1 /hurd/exec \$(exec-task=task-create)
-}
-
-EOF
-			fi
+			case $grub_version in
+			    grub)	grub_write_hurd ;;
+			    grub2)	grub2_write_hurd ;;
+			esac
 		;;
 		*)
 			info "unhandled: $os"
@@ -610,17 +503,11 @@ IFS="$OLDIFS"
 rm -f /tmp/os-probed
 
 if [ -s $tmpfile ] ; then
-	if [ "${grub_version}" = "grub" ] ; then
-		cat >> $ROOT/boot/grub/${menu_file} << EOF
-
-# This is a divider, added to separate the menu items below from the Debian
-# ones.
-title		Other operating systems:
-root
-
-EOF
-	fi
-	cat $tmpfile >> $ROOT/boot/grub/${menu_file}
+	case $grub_version in
+	    grub)	grub_write_divider ;;
+	    grub2)	: ;;
+	esac
+	cat $tmpfile >> $ROOT/boot/grub/$menu_file
 	rm -f $tmpfile
 fi
 
