@@ -1,9 +1,17 @@
 grub-installer (1.19) UNRELEASED; urgency=low
 
+  [ Otavio Salvador ]
   * Remove Standards-Version field from control file.
   * Add Lintian override for standards-version.
 
- -- Otavio Salvador <otavio@debian.org>  Tue,  5 Sep 2006 10:14:07 -0300
+  [ Frans Pop ]
+  * Split out functions to write the grub menu files from grub-installer as
+    it was getting too long and too complicated with support of both grub and
+    grub2. grub and grub2 now use separate functions.
+  * Disable the option to select grub2 for the Etch release as it was only
+    experimental.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 26 Oct 2006 15:22:19 +0200
 
 grub-installer (1.18) unstable; urgency=low
 
